Overflow fix...

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,6 +10,8 @@ body {
     );
 
     min-height: 100vh;
+
+    overflow: hidden !important;
 }
 
 /* NAV */
